--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Cucumber dependency  -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>7.20.1</version>
+        </dependency>
+
+        <!-- Cucumber testNG dependency  -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>7.20.1</version>
+        </dependency>
 
         <!-- Add junit 5 dependency -->
         <dependency>
